# dbc-informed-socketcan-to-parquet

./: CMakeLists.txt  README.md  arguments.h  candump_parse.h  custom_types.cpp  custom_types.h  decoder.cpp  decoder.h  fs.dbc  influxupload.h  main.cpp  main.cpp.old  tcpstream.h
src/: arguments.h  custom_types.cpp  custom_types.h  decoder.cpp  decoder.h  exit.h  influxupload.h  main.cpp  main.cpp.bak  websocketIPC.h  writeparquet.h
src/inputs/: candump_parse.h  fileInput.cpp  fileInput.h  genericInput.cpp  genericInput.h  parquetInput.cpp  parquetInput.h  socketInput.cpp  socketInput.h  stdinInput.cpp  stdinInput.h
